testdata/zkc/invalid/constant_invalid_04.zkc
;;error:2:25-30:cyclic defintion
constant u8 LARGE = 1 * LARGE
